# twigr

./: .gitignore  LICENSE  README.md
api/: Dockerfile  alembic.ini  pyproject.toml
api/app/: db.py  main.py
api/app/routers/: syslog.py  twigs.py
api/migrations/: env.py
api/migrations/versions/: 2020-01-17-create_twigs_table.py  2020-01-20-add_added_on_to_twig_table.py
api/tests/: conftest.py  test_create_from_syslog.py  test_create_twig.py  test_list_twigs.py
tasks/api/: build.sh  debug.sh  init.sh  makemigrations.sh  migrate.sh  run.sh  test.sh
