[tool.poetry]
name = "twigr-api"
version = "0.1.0"
description = ""
authors = ["William Mayor"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.46.0"
uvicorn = "^0.11.1"
databases = {extras = ["postgresql"], version = "^0.2.6"}
alembic = "^1.3.2"
syslog-rfc5424-parser = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
